src/styles/main.scss
@use "variables" as *;

@use "components";
@use "utils";

@use "animations";
@use "main.animations";

@use "sections/header";
@use "sections/footer";
@use "sections/profile";
@use "sections/overview";
@use "sections/projects";
@use "sections/illustrations";
@use "sections/links";
@use "input";
@use "extra";

@use "main.mobile" as mobile;
@use "main.desktop" as desktop;

@use "sass:color";

::selection{
  background: $secondary;
  color: $background;
}

svg {
  display: inline-block;
  height: 1em;
  box-sizing: content-box;
  fill: $text;
  vertical-align: -0.125em;
  overflow: visible;
}

a {
  color: $text;

  & > svg {
    height: 1em;
  }

  &:hover {
    color: $secondary;
    text-decoration: underline;

    & > svg {
      fill: $secondary;
    }
  }
}

hr.hr {
  border: none;
  border-top: 2px dashed color.mix($text, $background-dark, 19%);
}

html {
  color-scheme: dark only !important;
  scroll-behavior: smooth !important;

  @include style-scrollbar;
}

body {
  position: relative;
  display: flex;
  flex-direction: column;

  min-height: 100vh;
  max-width: 1700px;
  margin: auto;

  color: $text;

  @include shadow-black;

  letter-spacing: .05em;
}

main {
  flex-grow: 1;
  min-height: 100vh;
  overflow-x: clip;
  z-index: 3;

  & > section {
    position: relative;
    padding-left: .5em;
    padding-right: .5em;

    & > .section-inner {
      width: 100%;
      max-width: 1100px;
      margin: auto;
      // padding-left: 1em;
      // padding-right: 1em;
      padding: 1em;
    }
  }
}

h1 {
  font-weight: 200;
  font-size: 2em;
}

.heading-mobile {
  padding: 1.5em;

  & > h1 {
    margin: 0;
    font-size: 2em;
  }
}

// canvas[data-generated="true"] {
//   position: absolute;
//   top: 0;
//   left: 0;
//   opacity: 0;
//   animation: fade-in 1.3s ease forwards;
// }

// @keyframes fade-in {
//   to {
//     opacity: 1;
//   }
// }

.cta-container {
  position: absolute;
  display: flex;
  align-items: end;
  width: 100%;
  height: 100%;
}

.cta-inner {
  display: flex;
  width: 100%;
  // height: fit-content;
  margin: 2em;
  margin-bottom: 3em;
}

.cta-group {
  display: flex;
  flex-direction: column;
  margin: 0 1em;
}

.cta-label {
  margin-top: .5em;
//   margin: 0 1em;
}

.cta-button {
  position: relative;
  display: flex;

  align-items: center;
  justify-content: center;

  width: fit-content;
  // margin: 0 1em;

  box-sizing: border-box;

  padding: .35em .8em;

  color: $text;

  border: 1px solid $text;
  border-radius: 16px;

  // font-weight: 600;
  letter-spacing: 1px;
  text-decoration: none;

  cursor: pointer;

  overflow: hidden;
  backdrop-filter: blur(.6em);

  background: rgba($background-dark, 0.5);

  // box-shadow: 0 0 2em $background-dark;

  transition: ease .5s;

  & > svg {
    height: 1em;
    margin-right: .5em;
  }

  &:hover {
    color: $background-dark;

    &::after {
      transform: translateX(0);
    }

    & > svg {
      fill: $background-dark;
    }
  }

  &::after {
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    background: $secondary-gradient;
    width: 100%;
    height: 100%;
    border-radius: 16px;
    transition: ease .25s;
    z-index: -1;
    transform: translateX(-100%);
  }
}

#cta-comm {
  // border-color: $primary;
  border-bottom: 2px $primary dashed;

  & > svg > path{
    fill: $primary;
  }

  &::after {
    background: $primary-gradient;
  }
}

#cta-patreon {
  // border-color: $secondary;
  border-bottom: 2px $secondary dashed;

  & > svg {
    fill: $secondary;
  }
}

#cta-comm, #cta-patreon {
  &:hover {
    & > svg, & > svg > path {
      fill: $background-dark;
    }
  }
}

.down-indicator-cont {
  flex-grow: 1;
  align-items: end;
  // margin-right: 3em;
}

.down-indicator {
  position: relative;
  width: 2.25em;
  height: 2.25em;

  & > svg {
    display: block;
    width: 1.5em;
    height: 1.5em;
    margin: auto;

    animation: 2s mouse-wiggle ease infinite;
  }

  & > .arrows > svg {
    position: absolute;
    display: block;
    width: inherit;
    height: inherit;

    animation: 2s arrow-down ease-out infinite;

    opacity: 0;

    &:nth-child(2) {
      animation-delay: .3s;
    }

    &:nth-child(3) {
      animation-delay: .6s;
    }
  }
}

@keyframes arrow-down {
  0% {
    transform: translateY(-200%);
    opacity: 0;
  }

  50% {
    opacity: 1;
  }

  100% {
    transform: translateY(50%);
    opacity: 0;
  }
}

@keyframes mouse-wiggle {
  0%, 100% {
    transform: translateY(-4.5em);
  }

  50% {
    transform: translateY(-3.5em);
  }
}

.self-cont {
  position: absolute;
  top: 0;
  left: 1em;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  align-items: end;
  justify-content: center;
  pointer-events: none;

  transition: .8s transform cubic-bezier(0.25, 1, 0.5, 1);
  // will-change: tranform;

  & > .inner {
    margin-right: 3em;
  }

  & .title {
    font-size: 3em;
    margin: 0;
    text-transform: uppercase;
    opacity: .8;

    transition: .8s transform cubic-bezier(0.25, 1, 0.5, 1);
    // will-change: tranform;

    // &::first-letter {
    //   font-weight: bold;
    // }
  }

  & .name-cont {
    position: relative;

    & > svg {
      position: absolute;
      top: -2em;
      left: -13em;
      // font-size: 15em;
      height: 15em;
      opacity: .25;
    }
  }
}

.illust-cont {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  align-items: center;
  justify-content: center;
  pointer-events: none;
  z-index: -1;

  & > .fg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    min-height: 100%;
    backdrop-filter: blur(13em) brightness(.9);
    mask-mode: alpha;
    mask-image:
      linear-gradient(195deg, #000 10%, transparent 49%)
    , linear-gradient(0deg, #000 2%, transparent 15%)
    , linear-gradient(17.5deg, #000 9.5%, transparent 23.5%)
    , radial-gradient(circle at 0% 0%, #000 2%, transparent 35%)
    ;
    will-change: tranform;
    z-index: 1;
  }

  & > img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    z-index: 0;

    transition: .8s transform cubic-bezier(0.25, 1, 0.5, 1);
    will-change: tranform;
  }
}

// "In development" notice
// #in-dev-stat {
//   display: flex;
//   flex-direction: column;
//   width: 100%;
//   height: 100%;
//   align-items: center;
//   justify-content: center;

//   font-size: 2em;
//   font-weight: 200;

//   text-align: center;
//   letter-spacing: .2ch;

//   opacity: .7;

//   & > .icon {
//     width: 5em;
//   }
// }

// .section-title {
//   font-size: 2.5em;
//   font-weight: 400;

//   & > small {
//     display: inline-block;
//     margin-left: .25em;
//     margin-right: .25em;
//     color: color.mix($text, $secondary, 50%);
//     font-weight: 200;
//     opacity: .7;
//   }
// }

.section-controls {
  display: flex;
}

#home {
  height: 100dvh;
  // height: 100vh;
  min-height: 620px;
  width: 100%;
  max-width: 1700px;
  overflow: hidden;

  & > .content {
    position: fixed;
    top: 0;

    display: flex;

    height: inherit;
    width: inherit;
    max-height: inherit;
    max-width: inherit;

    z-index: 3;
  }
}

@media (width <= 700px) {
  #home {
    padding-top: 9em;

    & > .content {
      flex-direction: column;
      align-items: center;
    }
  }

  .cta-container {
    // flex-direction: column;
    align-items: end;
    justify-content: center;
    margin: 0;
    margin-bottom: 1.6em;

    // & > small {
    //   margin-right: 0;
    //   margin-bottom: 1.2em;
    // }
  }

  .cta-group {
    margin-bottom: 1em;
  }

  .cta-inner {
    margin: 0;
    // text-align: center;
    flex-direction: column;

    & > small {
      margin-top: 1em;
    }
  }

  .down-indicator-cont {
    // margin-right: 2em;
    // margin-bottom: 2em;
    font-size: .7em;
    transform: translate(-1.5em, -20vh);
  }
};

@media (width >= 1200px) {
  #home {
    max-height: 920px;
  }
}

@media (width >= 1700px) {
  body::before {
    content: "";
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: $background-dark;
    background-image: url(#{"https://s2.svgbox.net/heropatterns.svg?ic=hideout&color=eee1"});
    background-size: 10vw;
    background-position-y: 100vw;
    animation: u 100s linear infinite;
  }

  @keyframes u {
    100% {
      background-position-y: -100vw;
    }
  }
}

@include mobile.style;
@include desktop.style;

